Enemy's Hit Direction
- Updated CC_GameplayAbility C++ class to handle the debug message to avoid clutter in the event graph of the abilities
- Created CC_BlueprintLibrary, a utility C++ class responsible for calculating the hit direction of the enemy and produce an FName to be used in the montages, the calculation are based on the dot and cross product between the enemy forward direction and the direction from the enemy to the instigator
- Added two member FVector variables in CC_HitReact and Blueprint Callable function void CacheHitDirectionVectors(AActor* Instigator), those two vectors will be used to calculate the hit direction
- Refactored Code in the GA_CC_HitReact event graph, now once the event received, the hit direction name gets stored to be used later to jump section in montages

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -151,3 +151,8 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/Project_GAS_CC.CC_BlueprintLibrary.EHirDirection",NewName="/Script/Project_GAS_CC.CC_BlueprintLibrary.EHitDirection")
++EnumRedirects=(OldName="/Script/Project_GAS_CC.EHitDirection",ValueChanges=(("Backward","Back")))
++EnumRedirects=(OldName="/Script/Project_GAS_CC.EHitDirection",ValueChanges=(("Front","Forward")))
