--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -14,4 +14,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="CCTags.CCAbilities.Death",DevComment="Tag for the death ability")
 +GameplayTagList=(Tag="CCTags.CCAbilities.Enemy.HitReact",DevComment="Tag for the enemy hit react ability")
 +GameplayTagList=(Tag="CCTags.Events.Player.Primary",DevComment="")
++GameplayTagList=(Tag="CCTags.Status.Dead",DevComment="tag to mark the character dead")
 
